<resources>
    <string name="app_name">Nigiri Moe</string>

    <string name="orders">Pedidos: %d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_cash_register">Caja registradora</string>
    <string name="action_delete_orders">Limpiar pedidos</string>
    <string name="course_image_description">Imagen del plato</string>
    <string name="course_name">Nombre del plato</string>
    <string name="course_price">5.00</string>
    <string name="edit_course_alergens_title">Alergias</string>
    <string name="edit_course_observations">Observaciones</string>
    <string name="edit_course_observations_text">Sin observaciones</string>
    <string name="edit_course_name">Nombre del plato</string>
    <string name="edit_course_image_description">Imagen del plato elegido</string>
    <string name="allergen_sulfide">Dióxido de azufre y sulfitos</string>
    <string name="allergen_egg">Huevo</string>
    <string name="allergen_mustard">Mostaza</string>
    <string name="allergen_mollusc">Moluscos</string>
    <string name="allergen_milk">Leche</string>
    <string name="allergen_crustaceans">Crustáceos</string>
    <string name="allergen_fish">Pescado</string>
    <string name="allergen_lupin">Altramuz</string>
    <string name="allergen_celery">Apio</string>
    <string name="allergen_gluten">Gluten</string>
    <string name="allergen_sesame">Granos de sésamo</string>
    <string name="allergen_soybean">Soja</string>
    <string name="allergen_peanut">Cacahuetes</string>
    <string name="allergen_almond">Almendra</string>
    <string name="add_order">Añadimos pedido nuevo</string>
    <string name="undo_add_order">Deshacer añadir pedido</string>
    <string name="mod_order_observations">Modificamos observaciones del pedido</string>
    <string name="undo_mod_order_observations">Deshacer modificar observaciones</string>
    <string name="order_canceled">Se ha cancelado el pedido</string>
    <string name="mod_order_observations_canceled">Se han cancelado las observaciones</string>
    <string name="cancel">Cancelar</string>
    <string name="Oooops">Oooops!</string>
    <string name="recover_orders">Estás a tiempo de recuperar los pedidos</string>
    <string name="delete_orders">Borrar pedidos</string>
    <string name="all_orders_will_be_deleted">Todos los pedidos de esta mesa serán eliminados</string>
    <string name="ok">Aceptar</string>
    <string name="cash_register">Caja registradora</string>
    <string name="downloading_error">Error en la descarga</string>
    <string name="unable_download_menu">No se puede descargar el menú</string>
    <string name="retry">Reintentar</string>
    <string name="exit">Salir</string>
    <string name="to_pay">A cobrar %.2f</string>
</resources>
