<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.tho.nigirimoe.adapter.MenuRecyclerViewAdapter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    app:cardCornerRadius="@dimen/card_corner"
    app:cardElevation="@dimen/card_elevation"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/course_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/course_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/course_price"
            app:layout_constraintStart_toEndOf="@+id/course_image"
            app:layout_constraintTop_toTopOf="@+id/course_image"
            tools:text="@string/course_name" />

        <TextView
            android:id="@+id/course_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/course_name"
            app:layout_constraintTop_toTopOf="@+id/course_name"
            tools:text="@string/course_price" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>

